--- a/src/mobile.css
+++ b/src/mobile.css
@@ -48,7 +48,14 @@
     align-items: center;
     justify-content: center;
     overflow: hidden;
-}
+  }
+  .dialog {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  } .dialog button {
+    font-size: 1rem;
+  }
 }
 @media (max-width: 730px){
       body {
@@ -82,6 +89,11 @@
   } .footer input {
     border-radius: 15px;
   }
+  .dialog {
+    flex-direction: column;
+  } .dialog button {
+    font-size: 1rem;
+  }
 }
 
 @media (max-height: 1125px) {
@@ -99,5 +111,10 @@
     padding: 0;
   } .footer button{
     height: 50px;
+  }
+  .dialog {
+    flex-direction: column;
+  } .dialog button {
+    font-size: 1rem;
   }
 }
